[tool.poetry]
name = "yolov3-tf2"
version = "0.1.0"
description = "clean implementation of YoloV3 in TensorFlow 2.0 using all the best practices"
authors = ["Zihao Zhang <zzh882@gmail.com>, Raghu Mulukutla <raghu.tjm@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "3.7.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "yolov3_tf2" },
]

[tool.githooks]
pre-commit = "black --line-length 79 ."